syntax = "proto3";

package api.v1;

import "api/v1/options.proto";
import "api/v1/shared.proto";

import "buf/validate/validate.proto";

service RoutineService {
  rpc CreateRoutine(CreateRoutineRequest) returns (CreateRoutineResponse) {
    option (auth) = true;
  }
  rpc GetRoutine (GetRoutineRequest) returns (GetRoutineResponse) {
    option (auth) = true;
  }
  rpc UpdateRoutine (UpdateRoutineRequest) returns (UpdateRoutineResponse) {
    option (auth) = true;
  }
  rpc DeleteRoutine (DeleteRoutineRequest) returns (DeleteRoutineResponse) {
    option (auth) = true;
  }
  rpc ListRoutines (ListRoutinesRequest) returns (ListRoutinesResponse) {
    option (auth) = true;
  }
  rpc AddExercise (AddExerciseRequest) returns (AddExerciseResponse) {
    option (auth) = true;
  }
  rpc RemoveExercise (RemoveExerciseRequest) returns (RemoveExerciseResponse) {
    option (auth) = true;
  }
  rpc UpdateExerciseOrder (UpdateExerciseOrderRequest) returns (UpdateExerciseOrderResponse) {
    option (auth) = true;
  }
}

message CreateRoutineRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  repeated string exercise_ids = 2 [(buf.validate.field).repeated.min_items = 1];
}
message CreateRoutineResponse {
  string id = 1;
}

message GetRoutineRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message GetRoutineResponse {
  Routine routine = 1;
}

message UpdateRoutineRequest {
  Routine routine = 1 [(buf.validate.field).required = true];
}
message UpdateRoutineResponse {
  Routine routine = 1;
}

message DeleteRoutineRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message DeleteRoutineResponse {}

message ListRoutinesRequest {
  string name = 1;
  PaginationRequest pagination = 2 [(buf.validate.field).required = true];
}
message ListRoutinesResponse {
  repeated Routine routines = 1;
  PaginationResponse pagination = 2;
}

message AddExerciseRequest {
  string routine_id = 1 [(buf.validate.field).string.uuid = true];
  string exercise_id = 2 [(buf.validate.field).string.uuid = true];
}
message AddExerciseResponse {}

message RemoveExerciseRequest {
  string routine_id = 1 [(buf.validate.field).string.uuid = true];
  string exercise_id = 2 [(buf.validate.field).string.uuid = true];
}
message RemoveExerciseResponse {}

message UpdateExerciseOrderRequest {
  string routine_id = 1 [(buf.validate.field).string.uuid = true];
  repeated string exercise_ids = 2 [(buf.validate.field).repeated.min_items = 1];
}
message UpdateExerciseOrderResponse {}

message Routine {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  repeated Exercise exercises = 3 [(buf.validate.field).repeated.min_items = 1];
}


